# fileTypeFuzzer

./: README.md  mutationGenerator.py  mutationTester.py  pyproject.toml
src/file_type_fuzzer_xoth42/: mutationGenerator.py
test/: fuzzer_test.py
